#######################################################################
# CONFIGURATION FILE
# This is the preferred file format in place of older setup.py
# 
# Examples
# --------
# Install ipyrad with:
#     >>> conda install ipyrad -c conda-forge -c bioconda
# Or, for developers, install dependencies and then ipyrad w/ pip local:
#     >>> cd ipyrad/
#     >>> conda env create -f environment.yml
#     >>> pip install -e . --no-deps
#######################################################################

[metadata]
name = ipyrad
version = attr: ipyrad.__version__
author = Deren Eaton & Isaac Overcast
author_email = de2356@columbia.edu
url = https://ipyrad.readthedocs.io
description = Interactive assembly and analysis of RAD-seq data sets
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = RAD, RAD-seq, ddRAD, assembly, popgen, phylogeny
license = GPL
license_files =
    LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
zip_safe = False  # recommended if you use __file__ in your code.
include_package_data = True
install_requires =
    python>=3.7
    ipython
    jupyter
    pydantic
    loguru
    requests
    h5py
    toyplot
    toytree
    pandas
    scipy
    numpy
    numba
    ipyparallel >=7.0
    pysam >=0.15
    vsearch >=2.13
    bedtools
    muscle
    fastp
    bwa
    samtools
    zlib

[options.entry_points]
console_scripts = 
    ipyrad = ipyrad.__main__:cli

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1
mpi = 
    mpi4py>=3.0
